# kompose-fix

./: .coveragerc  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
envs/: dev.env
kompose/: settings.py
songs/: models.py  serializers.py  tests.py  urls.py  views.py
songs/migrations/: 0002_alter_song_votes.py
